# agentic

./: .gitignore  Cargo.toml  README.md  api_test.rs  test_api.rs  verify_compliance.sh
.github/workflows/: rust.yml
crates/agentic-core/: Cargo.toml
crates/agentic-core/src/: cloud.rs  lib.rs  models.rs  orchestrator.rs  settings.rs  theme.rs
crates/agentic-tui/: Cargo.toml
crates/agentic-tui/src/: main.rs
crates/agentic-tui/src/ui/: app.rs  chat.rs  footer.rs  header.rs  mod.rs  model_selection_modal.rs  settings_modal.rs
crates/starlit-gui/: Cargo.toml
crates/starlit-gui/src/: main.rs
examples/: bootloader_integration_test.rs  issue_19_demo.rs  issue_29_demo.rs  issue_30_demo.rs  issue_31_demo.rs  issue_32_demo.rs  issue_34_integration_test.rs  issue_4_demo.rs  layout_demo.rs  settings_demo.rs  theme_demo.rs  ui_layout_test.rs
release-notes/: release-notes-v0.1.1.md  release-notes-v0.1.2.md
scripts/: pre-commit.sh
src/: events.rs  layout.rs  lib.rs  main.rs  settings.rs  theme.rs
src/ui/: app.rs  mod.rs
