[package]
name = "agentic-core"
version = "0.1.2"
edition = "2021"
description = "Core AI orchestration library for Ruixen - the collaborative AI agent framework"
license = "MIT"
repository = "https://github.com/gitcoder89431/agentic"
homepage = "https://github.com/gitcoder89431/agentic"

[dependencies]
serde = { workspace = true }
ratatui = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
