[package]
name = "ruixen"
version = "0.1.2"
edition = "2021"
description = "Ruixen - The collaborative AI agent you work WITH, not at. Transform questions into profound insights through thoughtful query refinement and synthesis."
license = "MIT"
repository = "https://github.com/gitcoder89431/agentic"
homepage = "https://github.com/gitcoder89431/agentic"
readme = "../../README.md"

[[bin]]
name = "ruixen"
path = "src/main.rs"

[dependencies]
agentic-core = { path = "../agentic-core", version = "0.1.2" }
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
